fix(ui): rename body selector for z-index reset This fixes the modal window being behind the backdrop

--- a/assets/child-theme-main/styles/base/_body.scss
+++ b/assets/child-theme-main/styles/base/_body.scss
@@ -95,6 +95,6 @@ article[id^=post] {
 }
 
 //Unset Z-index that is set in the parent theme.
-div.page-template > * {
+div.page-content > * {
   z-index: unset;
 }
